add DeveloperDetailDto